# kingofthehill

./: .gitignore  README.md  docker-compose.yml  nx.json  package-lock.json  package.json
apps/backend/: Cargo.toml  Dockerfile  project.json
apps/backend/src/: main.rs
apps/backend/src/api/: mod.rs  pick_api.rs  team_api.rs
apps/backend/src/models/: mod.rs  pick.rs  response.rs  team.rs
apps/backend/src/repository/: mongo_repo.rs
apps/kingofthehill-client/: .eslintrc.json  jest.config.ts  project.json
apps/kingofthehill-client-e2e/: project.json
apps/kingofthehill-client-e2e/src/e2e/: app.cy.ts
apps/kingofthehill-client/src/: index.html  styles.scss
apps/kingofthehill-client/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  nx-welcome.component.ts
apps/kingofthehill-client/src/app/home/: home.component.scss  home.component.ts
apps/kingofthehill-client/src/app/services/: auth.service.ts  backend.service.ts
apps/kingofthehill-client/src/environments/: environment.ts
apps/webscraper/: scrapy.cfg
apps/webscraper/nfl_scores_scraper/: items.py  pipelines.py  settings.py
apps/webscraper/nfl_scores_scraper/spiders/: nfl_spider.py
libs/shared/: pick.d.ts  response.d.ts  team.d.ts
