[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
ts-rs = { version = "7.0.0", features = ["format"] }


[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 
